# Bank-system

./: README.md
Project/: Admin.cpp  Admin.h  AdminManager.cpp  AdminManager.h  AdminServices.cpp  AdminServices.h  BalanceServices.cpp  BalanceServices.h  CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  ClientValidation.cpp  ClientValidation.h  Employee.cpp  Employee.h  EmployeeFunctionalitiesForScreen.cpp  EmployeeFunctionalitiesForScreen.h  EmployeeManager.cpp  EmployeeManager.h  EmployeeServices.cpp  EmployeeServices.h  EmployeeValidation.cpp  EmployeeValidation.h  FileManager.cpp  FileManager.h  FilesHelper.cpp  FilesHelper.h  Parser.cpp  Parser.h  Person.cpp  Person.h  Screens.cpp  Screens.h  Validate.cpp  Validate.h  main.cpp  vectors.h
